--- a/Ladder Filter/Readme
+++ b/Ladder Filter/Readme
@@ -5,3 +5,7 @@ Based on Moog Ladder Filter
 http://yusynth.net/Modular/index_en.html
 https://kassu2000.blogspot.com/2018/07/transistor-ladder-filter.html
 https://omsonic.co.uk/product/omsonic-transistor-ladder-filter-full-kit-2/
+
+Dont forget to match the transistors and capacitors in the ladder!
+Link for transistor testing:
+https://kassu2000.blogspot.com/2015/10/transistor-matching.html
